--- a/static/scss/custom/components/_recipe.scss
+++ b/static/scss/custom/components/_recipe.scss
@@ -38,6 +38,10 @@
         i {
             font-size: 3rem;
         }
+
+        a {
+            color: black;
+        }
     }
 
     .times {
@@ -65,6 +69,9 @@
 
     tbody {
     	border: 2px solid $table-striped-color;
+        td {
+            padding: 5px 5px;
+        }
     }
 
     h2 {
